adds featured cards, body sections

--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
 
   <body>
     <header>
+      <!-- creating the nav bar -->
       <nav class="nav">
         <h2 class="title-logo">root&bloom</h2>
         <ul class="nav-items">
@@ -36,9 +37,42 @@
     </header>
 
     <main>
+      <!-- adding some padding to get things below fixed nav -->
       <div class="padding"></div>
+      <!-- creatong the hero -->
       <section class="hero">
-        <h1 class="hero-title">root&bloom</h1>
+        <h1 class="hero__title">root&bloom</h1>
+        <h2 class="hero__subtitle">make your home your sanctuary</h2>
+        <article class="featured-card">
+          <img src="" alt="" />
+          <h3>featured-1</h3>
+        </article>
+        <article class="featured-card">
+          <img src="" alt="" />
+          <h3>featured-2</h3>
+        </article>
+      </section>
+
+      <section class="container">
+        <section class="new-plants">
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+          <article class="new-plants__card"></article>
+        </section>
+
+        <section class="plant-care-info">
+          <article class="plant-care-info__article"></article>
+          <article class="plant-care-info__article"></article>
+          <article class="plant-care-info__article"></article>
+          <article class="plant-care-info__article"></article>
+          <article class="plant-care-info__article"></article>
+        </section>
       </section>
     </main>
   </body>
