adds placeholder cards, gallery images and titles

--- a/main.html
+++ b/main.html
@@ -44,29 +44,87 @@
         <h1 class="hero__title">root&bloom</h1>
         <h2 class="hero__subtitle">make your home your sanctuary</h2>
         <article class="featured-card">
-          <img src="" alt="" />
           <h3>featured-1</h3>
+          <img src="https://placehold.co/120x120" alt="" />
         </article>
         <article class="featured-card">
-          <img src="" alt="" />
           <h3>featured-2</h3>
+          <img src="https://placehold.co/120x120" alt="" />
         </article>
       </section>
 
       <section class="container">
         <section class="new-plants">
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
-          <article class="new-plants__card"></article>
+          <h1 class="new-plants__title">new plants</h1>
+          <div class="new-plants__cards">
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-1.jpg"
+              alt="plant 1"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-2.jpg"
+              alt="plant 2"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-3.jpg"
+              alt="plant 3"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-4.jpg"
+              alt="plant 4"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-5.jpg"
+              alt="plant 5"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-6.jpg"
+              alt="plant 6"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-7.jpg"
+              alt="plant 7"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-8.jpg"
+              alt="plant 8"
+            />
+          </article>
+          <article class="new-plants__card">
+            <img
+              class="new-plants__image"
+              src="./assets/gallery_images/gallery-image-9.jpg"
+              alt="plant 9"
+            />
+          </article>
+        </div>
         </section>
 
         <section class="plant-care-info">
+          <h1 class="plant-care-info__title">community board</h1>
           <article class="plant-care-info__article"></article>
           <article class="plant-care-info__article"></article>
           <article class="plant-care-info__article"></article>
