adding javascript/API to get dynamic plant images

--- a/main.html
+++ b/main.html
@@ -15,6 +15,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="./scripts/newPlants.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
     <link rel="stylesheet" href="./styles/main.css" />
     <title>root&bloom</title>
   </head>
@@ -57,70 +60,70 @@
         <section class="new-plants">
           <h1 class="new-plants__title">new plants</h1>
           <div class="new-plants__cards">
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-1.jpg"
-              alt="plant 1"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-2.jpg"
-              alt="plant 2"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-3.jpg"
-              alt="plant 3"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-4.jpg"
-              alt="plant 4"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-5.jpg"
-              alt="plant 5"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-6.jpg"
-              alt="plant 6"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-7.jpg"
-              alt="plant 7"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-8.jpg"
-              alt="plant 8"
-            />
-          </article>
-          <article class="new-plants__card">
-            <img
-              class="new-plants__image"
-              src="./assets/gallery_images/gallery-image-9.jpg"
-              alt="plant 9"
-            />
-          </article>
-        </div>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-1.jpg"
+                alt="plant 1"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-2.jpg"
+                alt="plant 2"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-3.jpg"
+                alt="plant 3"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-4.jpg"
+                alt="plant 4"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-5.jpg"
+                alt="plant 5"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-6.jpg"
+                alt="plant 6"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-7.jpg"
+                alt="plant 7"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-8.jpg"
+                alt="plant 8"
+              />
+            </article>
+            <article class="new-plants__card">
+              <img
+                class="new-plants__image"
+                src="./assets/gallery_images/gallery-image-9.jpg"
+                alt="plant 9"
+              />
+            </article>
+          </div>
         </section>
 
         <section class="plant-care-info">
