adds plant images using pexels api

--- a/main.html
+++ b/main.html
@@ -59,71 +59,7 @@
       <section class="container">
         <section class="new-plants">
           <h1 class="new-plants__title">new plants</h1>
-          <div class="new-plants__cards">
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-1.jpg"
-                alt="plant 1"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-2.jpg"
-                alt="plant 2"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-3.jpg"
-                alt="plant 3"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-4.jpg"
-                alt="plant 4"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-5.jpg"
-                alt="plant 5"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-6.jpg"
-                alt="plant 6"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-7.jpg"
-                alt="plant 7"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-8.jpg"
-                alt="plant 8"
-              />
-            </article>
-            <article class="new-plants__card">
-              <img
-                class="new-plants__image"
-                src="./assets/gallery_images/gallery-image-9.jpg"
-                alt="plant 9"
-              />
-            </article>
-          </div>
+          <div class="new-plants__cards"></div>
         </section>
 
         <section class="plant-care-info">
